--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <div class="container d-flex align-items-center h-100">
+    <div class="container d-flex align-items-center h-75">
       <div class="row">
         <header class="text-center col-12">
           <h1 class="text-uppercase"><strong>The biggest startup event of the year</strong></h1>
         </header>
         <div class="buffer col-12"></div>
-        <section class="text-center col-12">
-          <hr>
-          <a href="https://mailchi.mp/c1ba983dbf04/ztmstudents"><button class="btn btn-primary btn-xl">Find out more</button></a>
-        </section>
       </div>
+    </div>
+    <div class="container d-flex align-items-center h-25">
+      <section class="text-center col-12">
+        <hr>
+        <a href="https://mailchi.mp/c1ba983dbf04/ztmstudents"><button class="btn btn-primary btn-xl">Find out more</button></a>
+      </section>
     </div>
   </body>
 </html>
